--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,79 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==4.3.0
+appnope==0.1.4
+asttokens==2.4.1
+attrs==23.2.0
+beautifulsoup4==4.12.3
 certifi==2024.2.2
-cffi==1.16.0
 charset-normalizer==3.3.2
-cryptography==42.0.5
-Deprecated==1.2.14
+comm==0.2.2
+dataclasses-json==0.6.4
+debugpy==1.8.1
+decorator==5.1.1
 distro==1.9.0
+executing==2.0.1
+faiss-cpu==1.8.0
+frozenlist==1.4.1
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
-openai==1.23.6
-pycparser==2.22
+ipykernel==6.29.4
+ipython==8.24.0
+jedi==0.19.1
+jsonpatch==1.33
+jsonpointer==2.4
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+langchain==0.1.16
+langchain-community==0.0.34
+langchain-core==0.1.45
+langchain-openai==0.1.3
+langchain-pinecone==0.1.0
+langchain-text-splitters==0.0.1
+langsmith==0.1.50
+marshmallow==3.21.1
+matplotlib-inline==0.1.7
+multidict==6.0.5
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+numpy==1.26.4
+openai==1.23.3
+orjson==3.10.1
+packaging==23.2
+parso==0.8.4
+pexpect==4.9.0
+pinecone-client==3.2.2
+platformdirs==4.2.1
+prompt-toolkit==3.0.43
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pydantic==2.7.1
 pydantic_core==2.18.2
-PyGithub==2.3.0
-PyJWT==2.8.0
-PyNaCl==1.5.0
+Pygments==2.18.0
+pypdf==4.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-github==0.1.0.dev0
+PyYAML==6.0.1
+pyzmq==26.0.3
+regex==2024.4.16
 requests==2.31.0
-setuptools==68.2.2
+six==1.16.0
 sniffio==1.3.1
+soupsieve==2.5
+SQLAlchemy==2.0.29
+stack-data==0.6.3
+tenacity==8.2.3
+tiktoken==0.6.0
+tornado==6.4
 tqdm==4.66.2
+traitlets==5.14.3
+typing-inspect==0.9.0
 typing_extensions==4.11.0
 urllib3==2.2.1
-wheel==0.41.2
-wrapt==1.16.0
+wcwidth==0.2.13
+yarl==1.9.4
