--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,14 @@ asttokens==2.4.1
 attrs==23.2.0
 beautifulsoup4==4.12.3
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 comm==0.2.2
+cryptography==42.0.7
 dataclasses-json==0.6.4
 debugpy==1.8.1
 decorator==5.1.1
+Deprecated==1.2.14
 distro==1.9.0
 executing==2.0.1
 faiss-cpu==1.8.0
@@ -51,9 +54,13 @@ prompt-toolkit==3.0.43
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycparser==2.22
 pydantic==2.7.1
 pydantic_core==2.18.2
+PyGithub==2.3.0
 Pygments==2.18.0
+PyJWT==2.8.0
+PyNaCl==1.5.0
 pypdf==4.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -76,4 +83,5 @@ typing-inspect==0.9.0
 typing_extensions==4.11.0
 urllib3==2.2.1
 wcwidth==0.2.13
+wrapt==1.16.0
 yarl==1.9.4
