update readme to include that gpt 3.5 model being used to generate readmes

--- a/.github/workflows/update_readme.yaml
+++ b/.github/workflows/update_readme.yaml
@@ -42,7 +42,7 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
           REPO_PATH: ${{ github.repository }}
-          PR_NUMBER: ${{ env.pull_reqeust_number }}
+          PR_NUMBER: ${{ env.pr_num }}
           COMMIT_SHA: ${{ env.commit_sha }}
         run: python main.py
       
