--- a/_mart__models.yml
+++ b/_mart__models.yml
@@ -1,3 +1,4 @@
+```yaml
 version: 2
 
 models:
@@ -166,3 +167,4 @@ models:
       - name: fiscal_year_id
         tests:
           - dbt_expectations.expect_column_to_exist
+```
