--- a/_mart__models.yml
+++ b/_mart__models.yml
@@ -121,14 +121,23 @@ models:
           - not_null
           - unique
           - dbt_expectations.expect_column_to_exist
+        - relationships:
+            field: agreement_id
+            to: ref('expiring_agreements.sql')
       - name: property_id
         tests:
           - not_null
           - dbt_expectations.expect_column_to_exist
+          - relationships:
+              field: property_id
+              to: ref('expiring_agreements.sql')
       - name: expiring_fiscal_year
         tests:
           - not_null
           - dbt_expectations.expect_column_to_exist
+          - relationships:
+              field: expiring_fiscal_year
+              to: ref('expiring_agreements.sql')
   - name: fulfillment_by_type
     columns:
       - name: id
