--- a/_mart__models.yml
+++ b/_mart__models.yml
@@ -42,8 +42,8 @@ models:
           - not_null
           - dbt_expectations.expect_column_to_exist
           - relationships:
-              field: id
-              to: ref('dim_organizations')
+              field: org_id
+              to: ref('expiring_agreements.org_id')
       - name: account_id
         tests:
           - not_null
@@ -126,6 +126,10 @@ models:
           - not_null
           - dbt_expectations.expect_column_to_exist
       - name: expiring_fiscal_year
+        tests:
+          - not_null
+          - dbt_expectations.expect_column_to_exist
+      - name: org_id
         tests:
           - not_null
           - dbt_expectations.expect_column_to_exist
