--- a/_mart__models.yml
+++ b/_mart__models.yml
@@ -109,7 +109,7 @@ models:
       - name: account_id
         tests:
           - dbt_expectations.expect_column_to_exist
-          - relationships: # this is what thoughtspot expects but it's often going to give an error unless 
+          - relationships: 
               field: id
               to: ref('dim_accounts')
               meta:
@@ -121,48 +121,17 @@ models:
           - not_null
           - unique
           - dbt_expectations.expect_column_to_exist
+          - relationships:
+              field: agreement_id
+              to: ref('dim_agreements')
       - name: property_id
         tests:
           - not_null
           - dbt_expectations.expect_column_to_exist
+          - relationships:
+              field: property_id
+              to: ref('dim_properties')
       - name: expiring_fiscal_year
         tests:
           - not_null
-          - dbt_expectations.expect_column_to_exist
-  - name: fulfillment_by_type
-    columns:
-      - name: id
-        tests:
-          - not_null
-          - unique
-          - dbt_expectations.expect_column_to_exist
-      - name: org_id
-        tests:
-          - not_null
-          - dbt_expectations.expect_column_to_exist
-      - name: property_id
-        tests:
-          - not_null
-          - dbt_expectations.expect_column_to_exist
-      - name: fiscal_year_id
-        tests:
-          - not_null
-          - dbt_expectations.expect_column_to_exist
-  - name: inventory_rate_analysis
-    columns:
-      - name: id
-        tests:
-          - not_null
-          - unique
-          - dbt_expectations.expect_column_to_exist
-      - name: org_id
-        tests:
-          - not_null
-          - dbt_expectations.expect_column_to_exist
-      - name: property_id
-        tests:
-          - not_null
-          - dbt_expectations.expect_column_to_exist
-      - name: fiscal_year_id
-        tests:
           - dbt_expectations.expect_column_to_exist
