--- a/_mart__models.yml
+++ b/_mart__models.yml
@@ -1,4 +1,4 @@
-version: 2
+CURRENT_YML: version: 2
 
 models:
   - name: activities
@@ -121,14 +121,26 @@ models:
           - not_null
           - unique
           - dbt_expectations.expect_column_to_exist
+          - relationships:
+              field: id
+              to: ref('dim_agreements')
       - name: property_id
         tests:
           - not_null
           - dbt_expectations.expect_column_to_exist
+          - relationships:
+              field: property_id
+              to: ref('dim_user_permissions')
+          - relationships:
+              field: id
+              to: ref('dim_properties')
       - name: expiring_fiscal_year
         tests:
           - not_null
           - dbt_expectations.expect_column_to_exist
+          - relationships:
+              field: fiscal_year_id
+              to: ref('dim_fiscal_years')
   - name: fulfillment_by_type
     columns:
       - name: id
