--- a/_mart__models.yml
+++ b/_mart__models.yml
@@ -121,11 +121,31 @@ models:
           - not_null
           - unique
           - dbt_expectations.expect_column_to_exist
-      - name: property_id
+          - relationships:
+              field: id
+              to: ref('dim_agreements')
+      - name: start_date
         tests:
           - not_null
           - dbt_expectations.expect_column_to_exist
-      - name: expiring_fiscal_year
+          - relationships:
+              field: agreement_id
+              to: ref('dim_agreements')
+      - name: end_date
+        tests:
+          - not_null
+          - dbt_expectations.expect_column_to_exist
+          - relationships:
+              field: agreement_id
+              to: ref('dim_agreements')
+      - name: is_active
+        tests:
+          - not_null
+          - dbt_expectations.expect_column_to_exist
+          - relationships:
+              field: agreement_id
+              to: ref('dim_agreements')
+      - name: id
         tests:
           - not_null
           - dbt_expectations.expect_column_to_exist
