--- a/_mart__models.yml
+++ b/_mart__models.yml
@@ -121,10 +121,30 @@ models:
           - not_null
           - unique
           - dbt_expectations.expect_column_to_exist
+          - relationships:
+              field: id
+              to: ref('dim_agreements')
+      - name: account_id
+        tests:
+          - not_null
+          - dbt_expectations.expect_column_to_exist
+          - relationships:
+              field: id
+              to: ref('dim_accounts')
       - name: property_id
         tests:
           - not_null
           - dbt_expectations.expect_column_to_exist
+          - relationships:
+              field: id
+              to: ref('dim_properties')
+      - name: org_id
+        tests:
+          - not_null
+          - dbt_expectations.expect_column_to_exist
+          - relationships:
+              field: id
+              to: ref('dim_organizations')
       - name: expiring_fiscal_year
         tests:
           - not_null
